Creation of two admin pages

--- a/views/partials/adminTabs.ejs
+++ b/views/partials/adminTabs.ejs
@@ -2,12 +2,11 @@
     <img src="/commonImages/Green Plant and Agriculture Logo.png" alt="">
 </div>
 <div class="right-1">
-    <a href="/">HOME</a>
-    <a href="/about">ABOUT US</a>
-    <a href="/services">OUR SERVICES</a>
-    <a href="/products">OUR PRODUCTS</a>
-    <a href="/auth/signup">SIGN UP</a>
-    <a href="/auth/login">LOG IN</a>
+    <a href="/admin/Dashboard">DASHBOARD</a>
+    <a href="/admin/Feeds">FEEDS</a>
+    <a href="/admin/Drugs">DRUGS</a>
+    <a href="/admin/Machinery">MACHINERY</a>
+    <a href="admin/Seeds">SEEDS</a>
 </div>
 <div class="right-2">
     <button onclick="showRight1()" id="openTab"><i class="fa-solid fa-bars"></i></button>
