--- a/views/sign_up.ejs
+++ b/views/sign_up.ejs
@@ -7,9 +7,6 @@
 <body>
    <div class="signupContainer">
     <div class="top">
-        <div class="left">
-            <img src="/commonImages/Green Plant and Agriculture Logo.png" alt="">
-        </div>
         <%-include('./partials/tabs.ejs') %>
     </div>
     <div class="body">
@@ -31,7 +28,7 @@
                         <%=errorMessage %>
                     </div>
                 <% } %>
-                <form action="/signup" method="post">
+                <form action="/auth/signup" method="post">
                     <label for="username">USERNAME</label><br>
                     <input type="text" id="username" name="username"><br>
 
