--- a/public/adminFeeds/adminFeeds.css
+++ b/public/adminFeeds/adminFeeds.css
@@ -67,17 +67,17 @@
         opacity: 0;
     }
 }
-.adminFeedsContainer .body .body-top .adminFeeds-message .alert {
+.adminFeedsContainer .body .body-top .welcome_message .alert {
     display: flex;
     justify-content: center;
     animation: fadeOut 10s forwards;
     overflow: hidden;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.adminFeedsContainer .body .body-top .adminFeeds-message .alert-success{
+.adminFeedsContainer .body .body-top .welcome_message .alert-success{
     color: #1F75FE;
 }
-.adminFeedsContainer .body .body-top .adminFeeds-message .alert-danger{
+.adminFeedsContainer .body .body-top .welcome_message .alert-danger{
     color: red;
 }
 .adminFeedsContainer .body .body-content .body-contentTop{
