--- a/views/adminFeeds.ejs
+++ b/views/adminFeeds.ejs
@@ -75,22 +75,22 @@
                             <td><%=Feed.productPrice %></td>
                             <td><%=Feed.productQuantity %></td>
                             <td>
-                                <button>EDIT</button>
+                                <button onclick="showDetails('<%= Feed._id %>')">EDIT</button>
                                 <div class="productDetail" id="detail-<%=Feed._id %>">
                                     <p><button id="close"><i class="fa-solid fa-x"></i></button></p>
                                     <div>
-                                        <form action="" method="post" enctype="multipart/form-data">
+                                        <form action="/admin/feed/<%= Feed._id %>/edit" method="post" enctype="multipart/form-data">
                                             <label for="image">FEED IMAGE</label><br>
-                                            <input type="file" id="image" name="productImage" value="<%=Feed.productImage %>"><br>
+                                            <input type="file" id="image" name="productImage" value="<%= Feed.productImage %>"><br>
         
                                             <label for="name">FEED NAME</label><br>
-                                            <input type="text" id="name" name="productName" value="<%=Feed.productName %>"><br>
+                                            <input type="text" id="name" name="productName" value="<%= Feed.productName %>"><br>
         
                                             <label for="price">FEED PRICE</label><br>
-                                            <input type="text" id="price" name="productPrice" value="<%=Feed.productPrice %>"><br>
+                                            <input type="text" id="price" name="productPrice" value="<%= Feed.productPrice %>"><br>
         
                                             <label for="quantity">FEED QUANTITY</label><br>
-                                            <input type="text" id="quantity" name="productQuantity" value="<%=Feed.productQuantity %>"><br>
+                                            <input type="text" id="quantity" name="productQuantity" value="<%= Feed.productQuantity %>"><br>
 
 
                                             <div class="button">
@@ -99,7 +99,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <button>DELETE</button>
+                                <button onclick="confirmDeleteFeed('<%= Feed._id %>')">DELETE</button>
                             </td>
                         </tr>
                
