--- a/views/adminDrugs.ejs
+++ b/views/adminDrugs.ejs
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%-include('./partials/header.ejs')  %>
-        <link rel="stylesheet" href="/adminFeeds/adminFeeds.css">
+        <%- include('./partials/header.ejs')  %>
+        <link rel="stylesheet" href="/adminDrugs/adminDrugs.css">
     </head>
 <body>
-    <div class="adminFeedsContainer">
+    <div class="adminDrugsContainer">
         <div class="top">
-            <%-include('./partials/adminTabs.ejs')  %>
+            <%- include('./partials/adminTabs.ejs')  %>
         </div>
         <div class="body">
             <div class="body-top">
                 <div class="welcome_message">
-                    <h1>ADMIN FEEDS</h1>
-                    <%-include('./partials/succesS_errorMessage.ejs')  %>
+                    <h1>ADMIN DRUGS</h1>
+                    <%-include('./partials/success_errorMessage.ejs')  %>
                 </div>
             </div>
             <div class="body-content">
                 <div class="body-contentTop">
                     <div>
-                        <button onclick="showAddProduct()"><h3>ADD FEED</h3></button>
+                        <button onclick="showAddProduct()"><h3>ADD DRUG</h3></button>
                         <h3>HISTORY</h3>
                     </div>
                     <form action="" method="">
-                        <input id="searchInput" type="text" name="query" placeholder="Search for products">
+                        <input type="text" name="query" placeholder="Search for products">
                     </form>
-                    <div class="addFeed">
+                    <div class="addDrug">
                         <p><button id="close" onclick="closeAddProduct()"><i class="fa-solid fa-x"></i></button></p>
                         <div>
-                            <form action="/admin/addFeed" method="POST" enctype="multipart/form-data">
-                                <label for="image">FEED IMAGE</label><br>
+                            <form action="" method="post" enctype="multipart/form-data">
+                                <label for="image">DRUG IMAGE</label><br>
                                 <input type="file" id="productImage" name="productImage"><br>
 
-                                <label for="name">FEED NAME</label><br>
+                                <label for="name">DRUG NAME</label><br>
                                 <input type="text" id="productName" name="productName"><br>
 
-                                <label for="price">FEED PRICE</label><br>
+                                <label for="price">DRUG PRICE</label><br>
                                 <input type="text" id="productPrice" name="productPrice"><br>
 
-                                <label for="quantity">FEED QUANTITY</label><br>
+                                <label for="quantity">DRUG QUANTITY</label><br>
                                 <input type="text" id="productQuantity" name="productQuantity"><br>
 
-                                <input type="hidden" id="productCategory" name="productCategory" value="Feeds">
+                                <input type="hidden" id="productCategory" name="productCategory" value="Drugs">
 
                                 <div class="button">
                                     <button type="submit">ADD PRODUCT</button>
@@ -59,29 +59,29 @@
                             <th>QUANTITY</th>
                             <th>ACTION</th>
                         </tr>
-                       <% Feeds.forEach((Feed)=>{ %>
+                       <% Drugs.forEach((Drug)=>{ %>
                         <tr>
-                            <td><img src="data:image/png;base64,<%=Feed.productImage%>" alt=""></td>
-                            <td><%=Feed.productName %></td>
-                            <td><%=Feed.productPrice %></td>
-                            <td><%=Feed.productQuantity %></td>
+                            <td><img src="data:image/png;base64,<%=Drug.productImage%>" alt=""></td>
+                            <td><%=Drug.productName %></td>
+                            <td><%=Drug.productPrice %></td>
+                            <td><%=Drug.productQuantity %></td>
                             <td>
-                                <button onclick="showDetails('<%= Feed._id %>')">EDIT</button>
-                                <div class="productDetail" id="detail-<%=Feed._id %>">
+                                <button>EDIT</button>
+                                <div class="productDetail" id="detail-<%=Drug._id %>">
                                     <p><button id="close"><i class="fa-solid fa-x"></i></button></p>
                                     <div>
-                                        <form action="/admin/feed/<%= Feed._id %>/edit" method="post" enctype="multipart/form-data">
+                                        <form action="" method="post" enctype="multipart/form-data">
                                             <label for="image">FEED IMAGE</label><br>
-                                            <input type="file" id="image" name="productImage" value="<%= Feed.productImage %>"><br>
+                                            <input type="file" id="image" name="productImage" value="<%=Drug.productImage %>"><br>
         
                                             <label for="name">FEED NAME</label><br>
-                                            <input type="text" id="name" name="productName" value="<%= Feed.productName %>"><br>
+                                            <input type="text" id="name" name="productName" value="<%=Drug.productName %>"><br>
         
                                             <label for="price">FEED PRICE</label><br>
-                                            <input type="text" id="price" name="productPrice" value="<%= Feed.productPrice %>"><br>
+                                            <input type="text" id="price" name="productPrice" value="<%=Drug.productPrice %>"><br>
         
                                             <label for="quantity">FEED QUANTITY</label><br>
-                                            <input type="text" id="quantity" name="productQuantity" value="<%= Feed.productQuantity %>"><br>
+                                            <input type="text" id="quantity" name="productQuantity" value="<%=Drug.productQuantity %>"><br>
 
 
                                             <div class="button">
@@ -90,7 +90,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <button onclick="confirmDeleteFeed('<%= Feed._id %>')">DELETE</button>
+                                <button>DELETE</button>
                             </td>
                         </tr>
                
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <script src="/commonJavascript.js"></script>
-    <script src="/adminFeeds/adminFeedsJavascript.js"></script>
+    <script src="commonJavascript.js"></script>
+    <script src="/adminDrugs/adminDrugsJavaScript.js"></script>
 </body>
 </html>
