--- a/public/commonStyles.css
+++ b/public/commonStyles.css
@@ -178,6 +178,71 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
+.adminFeedsContainer .body .body-content .body-contentTop .addFeed div form input,
+.adminDrugsContainer .body .body-content .body-contentTop .addDrug div form input {
+    width: 30vw;
+    height: 5vh;
+    margin-left: 1vw;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px black;
+    border: none;
+}
+.adminFeedsContainer .body .body-content .body-contentTop .addFeed div form .button button,
+.adminDrugsContainer .body .body-content .body-contentTop .addDrug div form .button button {
+    background-color: #03C03C;
+    color: white;
+    padding: 0.5vw;
+    border-radius: 5px;
+    border: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.adminFeedsContainer .body .body-content .body-contentBody,
+.adminDrugsContainer .body .body-content .body-contentBody {
+    padding-top: 1vh;
+    display: flex;
+    justify-content: center;
+    overflow-x: hidden;
+    box-sizing: border-box;
+    padding-bottom: 4vh;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table,
+.adminDrugsContainer .body .body-content .body-contentBody table {
+    border-collapse: collapse;
+    width: 80vw;
+    border: 1px solid #228B22;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table th,td,
+.adminDrugssContainer .body .body-content .body-contentBody table th,td {
+    border: 1px solid #228B22;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr th:first-of-type,
+.adminDrugsContainer .body .body-content .body-contentBody table tr th:first-of-type {
+    width: 15vw;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr th:nth-of-type(2),
+.adminDrugsContainer .body .body-content .body-contentBody table tr th:nth-of-type(2) {
+    width: 30vw;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr th:nth-of-type(3),
+.adminDrugsContainer .body .body-content .body-contentBody table tr th:nth-of-type(3) {
+    width: 10vw;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr th:nth-of-type(4),
+.adminDrugsContainer .body .body-content .body-contentBody table tr th:nth-of-type(4) {
+    width: 10vw;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr th:nth-of-type(5),
+.adminDrugsContainer .body .body-content .body-contentBody table tr th:nth-of-type(5) {
+    width: 15vw;
+}
+.adminFeedsContainer .body .body-content .body-contentBody table tr td,
+.adminDrugsContainer .body .body-content .body-contentBody table tr td {
+    text-align: center;
+    padding: 0.5vw;
+}
 @media only screen  and (max-width:900px){
     body{
         overflow-y: scroll;
