--- a/views/adminFeeds.ejs
+++ b/views/adminFeeds.ejs
@@ -25,7 +25,7 @@
                     <form action="" method="">
                         <input id="searchInput" type="text" name="query" placeholder="Search for products">
                     </form>
-                    <div class="addFeed">
+                    <div class="addProduct">
                         <p><button id="close" onclick="closeAddProduct()"><i class="fa-solid fa-x"></i></button></p>
                         <div>
                             <form action="/admin/addFeed" method="POST" enctype="multipart/form-data">
