--- a/views/adminDrugs.ejs
+++ b/views/adminDrugs.ejs
@@ -25,7 +25,7 @@
                     <form action="" method="">
                         <input type="text" name="query" placeholder="Search for products">
                     </form>
-                    <div class="addDrug">
+                    <div class="addProduct">
                         <p><button id="close" onclick="closeAddProduct()"><i class="fa-solid fa-x"></i></button></p>
                         <div>
                             <form action="" method="post" enctype="multipart/form-data">
