--- a/views/adminDrugs.ejs
+++ b/views/adminDrugs.ejs
@@ -100,7 +100,7 @@
             </div>
         </div>
     </div>
-    <script src="commonJavascript.js"></script>
+    <script src="/commonJavascript.js"></script>
     <script src="/adminDrugs/adminDrugsJavaScript.js"></script>
 </body>
 </html>
