--- a/public/commonStyles.css
+++ b/public/commonStyles.css
@@ -11,13 +11,109 @@ body {
     text-decoration: none;
 }
 
-/* Common styles for the adminDashboard, adminFeeds, adminDrugs and adminSeeds page */
+/* Common styles for the signup and login page */
+.signupContainer,
+.loginContainer {
+    width: 99vw;
+    height: max-content;
+}
+.signupContainer .body .body-top,
+.loginContainer .body .body-top {
+    width: 99vw;
+    height: 50vh;
+}
+.signupContainer .body .body-top img,
+.loginContainer .body .body-top img {
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+}
+.signupContainer .body .body-top div,
+.loginContainer .body .body-top div {
+    height: max-content;
+    background-color: rgb(255, 255, 255, 70%);
+    position: absolute;
+    top: 40vh;
+    left: 45vw;
+    padding: 3px;
+}
+.signupContainer .body .body-content,
+.loginContainer .body .body-content {
+    display: flex;
+    justify-content: center;
+    padding: 5vh 0;
+}
+.signupContainer .body .body-content .content,
+.loginContainer .body .body-content .content {
+    width: 50vw;
+    height: max-content;
+    padding: 2vh 7.5vw;
+}
+.signupContainer .body .body-content .content form,
+.loginContainer .body .body-content .content form {
+    padding: 1vw;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px black;
+}
+.signupContainer .body .body-content .content form label,
+.loginContainer .body .body-content .content form label {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+.signupContainer .body .body-content .content form input,
+.loginContainer .body .body-content .content form input {
+    width: 30vw;
+    height: 5vh;
+    margin-left: 1vw;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+    border-radius: 5px;
+    box-shadow: 5px 5px 15px black;
+    border: none;
+}
+.signupContainer .body .body-content .content form span,
+.loginContainer .body .body-content .content form span {
+    position: relative;
+    bottom: 6vh;
+    left: 29vw;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+.signupContainer .body .body-content .content form .button,
+.loginContainer .body .body-content .content form .button {
+    display: flex;
+    justify-content: center;
+}
+.signupContainer .body .bo y-content .content form .button button {
+    background-color: #03C03C;
+    color: white;
+    padding: 0.5vw;
+    border-radius: 5px;
+    border: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.signupContainer .body .body-content .content form p,
+.loginContainer .body .body-content .content form p {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    justify-content: center;
+}
+.signupContainer .body .body-content .content form p a,
+.loginContainer .body .body-content .content form p a {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    display: flex;
+    color: #03C03C;
+}
+
+/* Common styles for the signup page, log in page,  adminDashboard, adminFeeds, adminDrugs and adminSeeds page */
 .adminContainer,
 .adminFeedsContainer,
 .adminDrugsContainer {
     width: 99vw;
     height: 99vh;
 }
+.signupContainer .top,
+.loginContainer .top,
 .adminContainer .top, 
 .adminFeedsContainer .top,
 .adminDrugsContainer .top {
@@ -27,6 +123,8 @@ body {
     justify-content: space-between;
     padding: 0 1vw;
 }
+.signupContainer .top a,
+.loginContainer .top a,
 .adminContainer .top a,
 .adminFeedsContainer .top a,
 .adminDrugsContainer .top a {
@@ -34,6 +132,8 @@ body {
     border: 1px solid #B2BEB5;
     padding: 2px;
 }
+.signupContainer .top .left,
+.loginContainer .top .left,
 .adminContainer .top .left,
 .adminFeedsContainer .top .left,
 .adminDrugsContainer .top .left {
@@ -42,6 +142,8 @@ body {
     display: flex;
     align-items: center;
 }
+.signupContainer .top .left img,
+.loginContainer .top .left img,
 .adminContainer .top .left img,
 .adminFeedsContainer .top .left img,
 .adminDrugsContainer .top .left img {
@@ -49,6 +151,8 @@ body {
     height: 18vh;
     object-fit: cover;
 }
+.signupContainer .top .right-1,
+.loginContainer .top .right-1,
 .adminContainer .top .right-1,
 .adminFeedsContainer .top .right-1,
 .adminDrugsContainer .top .right-1 {
@@ -58,11 +162,15 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+.signupContainer .top .right-1 a,
+.loginContainer .top .right-1 a,
 .adminContainer .top .right-1 a, 
 .adminFeedsContainer .top .right-1 a,
 .adminDrugsContainer .top .right-1 a {
     font-weight: bold;
 }
+.signupContainer .top .right-2,
+.loginContainer .top .right-2,
 .adminContainer .top .right-2,
 .adminFeedsContainer .top .right-2,
 .adminDrugsContainer .top .right-2 {
@@ -102,6 +210,8 @@ body {
         opacity: 0;
     }
 }
+.signupContainer .body .body-content .content .alert,
+.loginContainer .body .body-content .content .alert,
 .adminFeedsContainer .body .body-top .welcome_message .alert,
 .adminDrugsContainer .body .body-top .welcome_message .alert {
     display: flex;
@@ -110,10 +220,14 @@ body {
     overflow: hidden;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+.signupContainer .body .body-content .content .alert-success,
+.loginContainer .body .body-content .content .alert-success,
 .adminFeedsContainer .body .body-top .welcome_message .alert-success,
 .adminDrugsContainer .body .body-top .welcome_message .alert-success {
     color: #1F75FE;
 }
+.signupContainer .body .body-content .content .alert-danger,
+.loginContainer .body .body-content .content .alert-danger,
 .adminFeedsContainer .body .body-top .welcome_message .alert-danger,
 .adminDrugsContainer .body .body-top .welcome_message .alert-danger {
     color: red;
@@ -338,18 +452,24 @@ body {
         overflow-x: hidden;
     }
     /* Media querying the admin pages */
+    .signupContainer .top,
+    .loginContainer .top,
     .adminContainer .top,
     .adminFeedsContainer .top,
     .adminDrugsContainer .top {
         width: inherit;
         height: 10vh;
     }
+    .signupContainer .top .left,
+    .loginContainer .top .left,
     .adminContainer .top .left,
     .adminFeedsContainer .top .left,
     .adminDrugsContainer .top .left {
         width: 30vw;
         height: inherit;
     }
+    .signupContainer .top .left img,
+    .loginContainer .top .left img,
     .adminContainer .top .left img,
     .adminFeedsContainer .top .left img,
     .adminDrugsContainer .top .left img {
@@ -357,6 +477,8 @@ body {
         height: 10vh;
         object-fit: cover;
     }
+    .signupContainer .top .right-1,
+    .loginContainer .top .right-1,
     .adminContainer .top .right-1,
     .adminFeedsContainer .top .right-1,
     .adminDrugsContainer .top .right-1 {
@@ -369,6 +491,8 @@ body {
         background-color: rgb(255, 255, 255, 70%);
         display: none;
     }
+    .signupContainer .top .right-2,
+    .loginContainer .top .right-2,
     .adminContainer .top .right-2,
     .adminFeedsContainer .top .right-2,
     .adminDrugsContainer .top .right-2 {
@@ -376,6 +500,8 @@ body {
         display: flex;
         align-items: center;
     }
+    .signupContainer .top .right-2 button,
+    .loginContainer .top .right-2 button,
     .adminContainer .top .right-2 button, 
     .adminFeedsContainer .top .right-2 button,
     .adminDrugsContainer .top .right-2 button {
@@ -384,6 +510,8 @@ body {
         background-color: white;
         color: black;
     }
+    .signupContainer .top .right-2 button:nth-of-type(2),
+    .loginContainer .top .right-2 button:nth-of-type(2),
     .adminContainer .top .right-2 button:nth-of-type(2),
     .adminFeedsContainer .top .right-2 button:nth-of-type(2),
     .adminDrugsContainer .top .right-2 button:nth-of-type(2) {
@@ -394,11 +522,53 @@ body {
     .adminDrugsContainer .body {
         height: 89vh;
     }
+    .signupContainer .body .body-top,
+    .loginContainer .body .body-top,
     .adminContainer .body .body-top,
     .adminFeedsContainer .body .body-top,
     .adminDrugsContainer .body .body-top {
         width: 99vw;
         height: 50vh;
+    }
+    /* Common styl;es for specifically the signup and log in page */
+    .signupContainer .body .body-top img,
+    .loginContainer .body .body-top img {
+        width: inherit;
+        height: inherit;
+        object-fit: cover;
+    }
+    .signupContainer .body .body-top div,
+    .loginContainer .body .body-top div {
+        width: 50vw;
+        height: max-content;
+        position: absolute;
+        top: 30vh;
+        left: 21vw;
+        padding: 3px;
+        text-align: center;
+    }
+    .signupContainer .body .body-content,
+    .loginContainer .body .body-content {
+        display: flex;
+        justify-content: center;
+        padding: 5vh 0;
+    }
+    .signupContainer .body .body-content .content,
+    .loginContainer .body .body-content .content {
+        width: 80vw;
+        height: max-content;
+        padding: 2vh 7.5vw;
+    }
+    .signupContainer .body .body-content .content form input,
+    .loginContainer .body .body-content .content form input {
+        width: 60vw;
+        height: 4vh;
+    }
+    .signupContainer .body .body-content .content form span,
+    .loginContainer .body .body-content .content form span {
+        position: relative;
+        bottom: 5vh;
+        left: 55vw;
     }
     .adminContainer .body .body-top div,
     .adminFeedsContainer .body .body-top div,
